<resources>
    <string name="app_name">Facebook</string>
    <string name="login_etUsername">Username</string>
    <string name="login_atPassword">Password</string>
    <string name="login_btnLogin">Log In</string>
    <string name="login_btnSignup">Don\'t have an account? Sign Up</string>
    <string name="login_etLogo">Meta</string>
    <string name="login_etInvalidInput">Minimum 8 characters, 1 number, 1 uppercase and 1 lowercase required</string>
    <string name="facebook_icon">facebook_icon</string>
    <string name="meta_icon">meta_icon</string>
    <string name="home_btn">Home</string>
    <string name="watch_btn">Watch</string>
    <string name="friends_btn">Friends</string>
    <string name="marketplace_btn">Marketplace</string>
    <string name="notifications_btn">Notifications</string>
    <string name="menu_btn">Menu</string>
    <string name="add_btn">ADD</string>
    <string name="search_btn">SEARCH</string>
    <string name="delete_btn">DELETE</string>
    <string name="facebook_logo">facebook_logo</string>
    <string name="picture">picture</string>
    <string name="like">like</string>
    <string name="comment">comment</string>
    <string name="share">share</string>
    <string name="add_post_hint">What\'s on your mind?</string>
    <string name="add_photo">add_photo</string>
    <string name="title_activity_comments">Comments</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="send">send</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account_log_in">do you have an account? Log in</string>
    <string name="password_authentication">Password Authentication</string>
    <string name="first_name">First Name</string>
    <string name="add_a_profile_image">Add a profile image</string>
    <string name="add_image_description">camera icon</string>
    <string name="add_from_gallery">Add from gallery</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="add_image">Add image</string>
    <string name="new_post_text">What do you want to share?</string>
    <string name="new_post">New Post</string>
    <string name="Share">Share</string>
    <string name="close_tag">close tag</string>
    <string name="user_profile_image">user profile image</string>
    <string name="add_image_icon">add image icon</string>
    <string name="share_now_friends">Share Now (Friends)</string>
    <string name="share_in_story">Share in Story</string>
    <string name="send_in_messenger">Send in Messenger</string>
    <string name="send_in_whatsapp">Send in Whatsapp</string>
    <string name="logout">Logout</string>
    <string name="mode">Mode</string>
    <string name="edit">edit</string>
    <string name="edit_your_comment">Edit Your Comment</string>
    <string name="BaseUrl">http://10.0.2.2:3000/</string>
    <string name="last_name">Last Name</string>
    <string name="profile_page">Profile Page</string>
    <string name="friendship_status">friendship status</string>
    <string name="delete_from_friends">Delete from Friends</string>
    <string name="ask_friendship">"Ask for Friendship"</string>
    <string name="asking_friendship">"Asking for Friendship..."</string>
    <string name="delete_my_user">Delete My User</string>
    <string name="edit_my_user">Edit My User</string>
    <string name="friends_requests">Friends Requests</string>
    <string name="profile_picture">profile picture</string>
    <string name="user_name">user name</string>
    <string name="approve">Approve</string>
    <string name="approve_friends_request">Approve Friends Request</string>

</resources>