<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.NotificationsActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/lightGreen"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/friends_requests"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/closeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/close_tag"
            app:srcCompat="@drawable/close_tag" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/userLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:id="@+id/profileImageProfilePage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/picture"
            android:padding="5dp"
            app:srcCompat="@drawable/man" />

        <TextView
            android:id="@+id/nameProfilePage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/first_name"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="426dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomLayoutFeed"
        app:layout_constraintTop_toBottomOf="@+id/userLayout"
        tools:layout_editor_absoluteX="56dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lstFriendsRequest"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toTopOf="@+id/bottomLayoutFeed"
            app:layout_constraintTop_toBottomOf="@+id/userLayout" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/bottomLayoutFeed"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/home"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/home_btn"
            android:drawableTop="@drawable/home_btn_gray"
            android:drawableBottom="@drawable/home_gray" />

        <Button
            android:id="@+id/watch"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/watch_btn"
            android:drawableTop="@drawable/ic_watch"
            android:drawableBottom="@drawable/watch_txt" />

        <Button
            android:id="@+id/friends"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/friends_btn"
            android:drawableTop="@drawable/ic_friends"
            android:drawableBottom="@drawable/friends_txt" />

        <Button
            android:id="@+id/marketplace"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/marketplace_btn"
            android:drawableTop="@drawable/ic_marketplace"
            android:drawableBottom="@drawable/marketplace_txt" />

        <Button
            android:id="@+id/notifications"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/notifications_btn"
            android:drawableTop="@drawable/ic_bell_blue"
            android:drawableBottom="@drawable/notifications_blue" />

        <Button
            android:id="@+id/menu"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/menu_btn"
            android:drawableTop="@drawable/ic_menu"
            android:drawableBottom="@drawable/menu_txt" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>