<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="6dp"
    android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageButton
                    android:id="@+id/closeBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/btn_delete"
                    android:layout_margin="5dp"
                    style="?android:attr/buttonBarButtonStyle"
                    android:contentDescription="@string/close_tag" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/share_friends_ic"
                android:text="@string/share_now_friends"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_margin="5dp"
                android:textColor="@color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/add_ic"
                android:text="@string/share_in_story"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_margin="5dp"
                android:textColor="@color/black"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/message_ic"
                android:text="@string/send_in_messenger"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_margin="5dp"
                android:textColor="@color/black"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/chat_ic"
                android:text="@string/send_in_whatsapp"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_margin="5dp"
                android:textColor="@color/black"/>
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>